--- a/components/vehicle/Vehicle.scss
+++ b/components/vehicle/Vehicle.scss
@@ -4,21 +4,32 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-    padding: 20px;
-    border: 2px solid black;
+    padding: 20px 0;
     width: 31%;
-    background-color: greenyellow;
+    min-width: 31%;
 
     .imageOfCar {
         cursor: pointer;
         transition: 0.5s;
         width: 100%;
         height: 100%;
-        border-radius: 10px;
 
         &:hover {
             transition: 0.5s;
             transform: scale(1.05);
+        }
+    }
+
+    .price {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 30px;
+        font-size: 1.5rem;
+
+        .icon {
+            color: green;
         }
     }
 }
