--- a/app/Home.scss
+++ b/app/Home.scss
@@ -16,6 +16,7 @@ main {
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        width: 100%;
         gap: 10px;
     }
   }
