--- a/components/vehicle/Vehicle.scss
+++ b/components/vehicle/Vehicle.scss
@@ -1,35 +1,36 @@
 .car {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 20px 0;
+  width: 31%;
+  min-width: 31%;
+
+  .imageOfCar {
+    cursor: pointer;
+    transition: 0.5s;
+    width: 100%;
+    height: 40vh;
+
+
+    &:hover {
+      transition: 0.5s;
+      transform: scale(1.05);
+    }
+  }
+
+  .price {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    padding: 20px 0;
-    width: 31%;
-    min-width: 31%;
+    width: 100%;
+    gap: 30px;
+    font-size: 1.5rem;
 
-    .imageOfCar {
-        cursor: pointer;
-        transition: 0.5s;
-        width: 100%;
-        height: 100%;
-
-        &:hover {
-            transition: 0.5s;
-            transform: scale(1.05);
-        }
+    .icon {
+      color: green;
     }
-
-    .price {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        gap: 30px;
-        font-size: 1.5rem;
-
-        .icon {
-            color: green;
-        }
-    }
+  }
 }
