--- a/components/gallery/Gallery.scss
+++ b/components/gallery/Gallery.scss
@@ -42,57 +42,15 @@
     .imageGallery {
       opacity: 1;
       border-radius: 10px;
+      transition: all 0.5s;
     }
   }
 
-
-  .effectRight {
-    animation-name: animationRight;
-    animation-duration: 0.7s;
-    animation-timing-function: linear;
-  }
-
-  @keyframes animationRight {
-    0% {
-      transform: translateX(0%);
-      opacity: 0.7;
-    }
-    30% {
-      transform: translateX(-40%);
-      opacity: 0.3;
-    }
-    70% {
+    .moveRight {
       transform: translateX(150%);
-      opacity: 0;
     }
-    100% {
-      transform: translateX(0%);
-      opacity: 1;
-    }
-  }
 
-  .effectLeft {
-    animation-name: animationLeft;
-    animation-duration: 0.7s;
-    animation-timing-function: linear;
-  }
-
-  @keyframes animationLeft {
-    0% {
-      transform: translateX(0%);
-      opacity: 0.7;
-    }
-    30% {
-      transform: translateX(40%);
-      opacity: 0.3;
-    }
-    70% {
+    .moveLeft {
       transform: translateX(-150%);
-      opacity: 0;
     }
-    100% {
-      transform: translateX(0%);
-      opacity: 1;
-    }
-  }
 }
