--- a/components/vehicle/Vehicle.scss
+++ b/components/vehicle/Vehicle.scss
@@ -8,18 +8,23 @@
   width: 31%;
   min-width: 31%;
 
-  .imageOfCar {
-    cursor: pointer;
-    transition: 0.5s;
+  .wrapperImage {
     width: 100%;
-    height: 40vh;
 
-
-    &:hover {
+    .imageOfCar {
+      cursor: pointer;
       transition: 0.5s;
-      transform: scale(1.05);
+      width: 100%;
+      height: 40vh;
+  
+  
+      &:hover {
+        transition: 0.5s;
+        transform: scale(1.05);
+      }
     }
   }
+
 
   .price {
     display: flex;
