set up align in .filtersAndSortSection

--- a/app/Home.scss
+++ b/app/Home.scss
@@ -9,6 +9,9 @@ main {
     .filtersAndSortSection {
         display: flex;
         gap: 30px;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
     }
   
     .carsSection {
